fixed overflow, spell checks

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
   background-color: #f7fafd;
 }
 
@@ -60,7 +62,6 @@ code {
   width: 80%;
   height: 100%;
   color: #282c34;
-  overflow-y: scroll;
 }
 
 .avatar{
@@ -74,12 +75,15 @@ code {
   }
   .sticky-sidebar {
     width: 100%;
-    height: 24%;
+    height: 30%;
     flex-direction: row-reverse;
   }
   .content-area {
     width: 98.5%;
     height: auto;
+  }
+  #work h2, #certifications h2, #casestudies h2{
+    text-align: center;
   }
 }
 
