--- a/src/styles/TimeLine.css
+++ b/src/styles/TimeLine.css
@@ -10,7 +10,7 @@
   /* Card container */
   .card {
     position: relative;
-    max-width: 85%; 
+    max-width: 90%; 
     padding: 1em;
   }
   
